// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`duty to refer utils detailsSummaryListRows returns correct rows for status ACCEPTED 1`] = `
[
  {
    "key": {
      "text": "Date submitted",
    },
    "value": {
      "text": "23 September 2024 (485 days ago)",
    },
  },
  {
    "key": {
      "text": "Local authority",
    },
    "value": {
      "text": "Some Council",
    },
  },
  {
    "key": {
      "text": "Reference",
    },
    "value": {
      "text": "REF123",
    },
  },
]
`;

exports[`duty to refer utils detailsSummaryListRows returns correct rows for status NOT_ACCEPTED 1`] = `
[
  {
    "key": {
      "text": "Date submitted",
    },
    "value": {
      "text": "23 September 2024 (485 days ago)",
    },
  },
  {
    "key": {
      "text": "Local authority",
    },
    "value": {
      "text": "Some Council",
    },
  },
  {
    "key": {
      "text": "Reference",
    },
    "value": {
      "text": "REF123",
    },
  },
]
`;

exports[`duty to refer utils detailsSummaryListRows returns correct rows for status NOT_STARTED 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--red">Not started</strong>",
    },
  },
]
`;

exports[`duty to refer utils detailsSummaryListRows returns correct rows for status SUBMITTED 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--yellow">Submitted</strong>",
    },
  },
  {
    "key": {
      "text": "Date submitted",
    },
    "value": {
      "text": "23 September 2024 (485 days ago)",
    },
  },
  {
    "key": {
      "text": "Local authority",
    },
    "value": {
      "text": "Some Council",
    },
  },
  {
    "key": {
      "text": "Reference",
    },
    "value": {
      "text": "REF123",
    },
  },
]
`;

exports[`duty to refer utils dutyToReferStatusCard returns a NOT_STARTED duty to refer status card object 1`] = `
{
  "details": [],
  "heading": "Duty to Refer (DTR)",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/dtr/guidance",
      "text": "Add submission details",
    },
    {
      "href": "/cases/CRN123/dtr/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "red",
    "text": "Not started",
  },
}
`;

exports[`duty to refer utils dutyToReferStatusCard returns a SUBMITTED duty to refer status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Submitted to",
      },
      "value": {
        "text": "Some Council",
      },
    },
    {
      "key": {
        "text": "Reference",
      },
      "value": {
        "text": "REF123",
      },
    },
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "1 December 2025 (9 days ago)",
      },
    },
  ],
  "heading": "Duty to Refer (DTR)",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/dtr/outcome",
      "text": "Add outcome",
    },
    {
      "href": "/cases/CRN123/dtr/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Submitted",
  },
}
`;

exports[`duty to refer utils dutyToReferStatusCard returns an empty duty to refer card for undefined duty to refer 1`] = `
{
  "details": [],
  "heading": "Duty to Refer (DTR)",
  "inactive": false,
  "links": [],
  "status": {
    "text": "Unknown",
  },
}
`;

exports[`duty to refer utils outcomeDetailsSummaryListRows returns correct rows for status ACCEPTED 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--yellow">Accepted</strong> <p class="govuk-!-margin-top-4">Some Council agreed to support this person with housing</p>",
    },
  },
]
`;

exports[`duty to refer utils outcomeDetailsSummaryListRows returns correct rows for status NOT_ACCEPTED 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag">Not accepted</strong> <p class="govuk-!-margin-top-4">Some Council will not support this person with housing</p>",
    },
  },
]
`;

exports[`duty to refer utils outcomeDetailsSummaryListRows returns correct rows for status NOT_STARTED 1`] = `[]`;

exports[`duty to refer utils outcomeDetailsSummaryListRows returns correct rows for status SUBMITTED 1`] = `[]`;
